--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.83"
+backtrace = "0.3.74"
 futures = "*"
 pin-project = "1.0"
 reqwest = "0.12.8"
