--- a/macros_impl/Cargo.toml
+++ b/macros_impl/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 bon = "3.3.2"
 convert_case = "0.6.0"
 darling = "0.20.10"
-derive_more = { version = "1.0.0", features = ["deref", "from"] }
+derive_more = { version = "1.0.0", features = ["deref", "display", "from"] }
 itertools = "0.13.0"
 nutype = "0.5.1"
 prettyplease = "0.2.29"
