--- a/typed_db/Cargo.toml
+++ b/typed_db/Cargo.toml
@@ -15,6 +15,8 @@ utils = { path = "../utils"  }
 backtrace = "0.3.75"
 parking_lot = "0.12.4"
 futures = "0.3.31"
+any_spawner = "0.3.0"
+derive_more = { version = "1.0.0", features = ["display", "deref"] }
 
 [features]
 idb = ["dep:idb", "dep:wasm-bindgen", "dep:js-sys", "utils/hydrate"]
