--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-any_spawner = { version = "0.3.0", features = ["futures-executor"] }
 async-trait = "0.1.83"
 backtrace = "0.3.74"
 futures = "*"
@@ -13,7 +12,9 @@ reqwest = "0.12.8"
 
 serde = "1.0.210"
 serde_json = "1.0.132"
+tokio = { version = "1.47.1", default-features = false }
 url = "2.5.2"
+wasm-bindgen-futures = "0.4.51"
 
 [features]
 ssr = []
