--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.83"
 backtrace = "0.3.74"
+bon = "3.7.2"
 futures = "*"
 pin-project = "1.0"
 reqwest = "0.12.8"
